<resources>
    <string name="app_name">TalaeeAndroid</string>
    <string name="jan">JAN</string>
    <string name="jan_desc">january month</string>
    <string name="feb">FEB</string>
    <string name="feb_desc">february month</string>
    <string name="mar">MAR</string>
    <string name="mar_desc">march month</string>
    <string name="apr">APR</string>
    <string name="apr_desc">april month</string>
    <string name="may">MAY</string>
    <string name="may_desc">may month</string>
    <string name="first_quarter">First quarter</string>
    <string name="second_quarter">Second quarter</string>
    <string name="lCountry">Country</string>
    <string name="enter_country">Enter Country...</string>
    <string name="lName">Name</string>
    <string name="enter_name">Enter Name...</string>
    <string name="lFamily">Family</string>
    <string name="enter_family">Enter Family...</string>
    <string name="lAge">Age</string>
    <string name="enter_age">Enter Age...</string>
    <string name="lEmail">Email</string>
    <string name="enter_email">Enter Email...</string>
    <string name="lNumber">Number</string>
    <string name="enter_phone_number">Enter Phone Number...</string>
    <string name="lOk">Confirm</string>
    <string name="msgSuccessfullSave">Your information saved successfully</string>
    <string name="lEdit">Edit</string>
    <string name="lShow">Show</string>
    <string name="lCancel">Refuse</string>
    <string name="hello_user_guest">Hello User Guest</string>
    <string name="userRefusedData">User refused data</string>
    <string name="userConfirmedData">User confirmed data</string>
    <string name="lBack">Back</string>
    <string name="guest_user">Guest User</string>
    <string name="lNewUser">New User</string>
    <string name="lUsersList">Users List</string>
    <string name="lClearList">Clear List</string>
    <string name="enter_city_name">Enter City Name...</string>
    <string name="get_times">Get Times</string>
    <string name="city_name" translatable="false">City Name</string>
    <string name="lFajr" translatable="false">Fajr:</string>
    <string name="lSunrise" translatable="false">Sunrise:</string>
    <string name="ldhuhr" translatable="false">Dhuhr:</string>
    <string name="lasr" translatable="false">Asr:</string>
    <string name="lsunset" translatable="false">Sunset:</string>
    <string name="lmaghrib" translatable="false">Maghrib:</string>
    <string name="lisha" translatable="false">Isha:</string>
    <string name="lImsak" translatable="false">Imsak:</string>
    <string name="lmidnight" translatable="false">Midnight:</string>
    <string name="timings">Timings</string>
    <string name="camera">Camera</string>
    <string name="open_camera">Open Camera</string>
    <string name="lYes">Yes</string>
    <string name="lNo">No</string>
    <string name="lOpen" translatable="false">Open</string>
    <string name="lClose" translatable="false">Close</string>
    <string name="movie_name" translatable="false">Movie Name...</string>
    <string name="movie_info" translatable="false">Movie Info</string>
    <string name="lTitle" translatable="false">Title:</string>
    <string name="lYear" translatable="false">Year:</string>
    <string name="lGenre" translatable="false">Genre:</string>
    <string name="lDirector" translatable="false">Director:</string>
    <string name="lWriter" translatable="false">Writer:</string>
    <string name="lActors" translatable="false">Actors:</string>
    <string name="lAwards" translatable="false">Awards:</string>
    <string name="lImdb" translatable="false">IMDB</string>


</resources>
