<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_marginStart="10dp"
    android:layout_marginEnd="10dp"
    android:layout_marginTop="10dp"
    tools:context=".FirstIntentTaskActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="60dp"
            android:layout_height="50dp"
            android:layout_marginBottom="10dp"
            android:background="@android:color/transparent"
            android:textColor="@color/intent_task_color"
            android:textSize="15dp"
            android:gravity="start|center"
            android:text="@string/lName" />

        <EditText
            android:layout_width="320dp"
            android:layout_height="50dp"
            android:background="@drawable/rounded_bg"
            android:hint="@string/enter_name"
            android:inputType="textPersonName|textCapWords" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="60dp"
            android:layout_height="50dp"
            android:layout_marginBottom="10dp"
            android:background="@android:color/transparent"
            android:textColor="@color/intent_task_color"
            android:textSize="15dp"
            android:gravity="start|center"
            android:text="@string/lFamily"

            />

        <EditText
            android:layout_width="320dp"
            android:layout_height="50dp"
            android:background="@drawable/rounded_bg"
            android:hint="@string/enter_family"
            android:inputType="textPersonName|textCapWords"

            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="60dp"
            android:layout_height="50dp"
            android:layout_marginBottom="10dp"
            android:background="@android:color/transparent"
            android:textColor="@color/intent_task_color"
            android:textSize="15dp"
            android:gravity="start|center"
            android:text="@string/lAge" />

        <EditText
            android:layout_width="320dp"
            android:layout_height="50dp"
            android:background="@drawable/rounded_bg"
            android:hint="@string/enter_age"
            android:inputType="number" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="60dp"
            android:layout_height="50dp"
            android:layout_marginBottom="10dp"
            android:background="@android:color/transparent"
            android:textColor="@color/intent_task_color"
            android:textSize="15dp"
            android:gravity="start|center"
            android:text="@string/lEmail" />

        <EditText
            android:layout_width="320dp"
            android:layout_height="50dp"
            android:background="@drawable/rounded_bg"
            android:hint="@string/enter_email"
            android:inputType="textEmailAddress" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="60dp"
            android:layout_height="50dp"
            android:layout_marginBottom="10dp"
            android:background="@android:color/transparent"
            android:textColor="@color/intent_task_color"
            android:textSize="15dp"
            android:gravity="start|center"
            android:text="@string/lNumber" />

        <EditText
            android:layout_width="320dp"
            android:layout_height="50dp"
            android:background="@drawable/rounded_bg"
            android:hint="@string/enter_phone_number"
            android:inputType="phone" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">

        <Button
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:background="@color/intent_task_color"
            android:text="@string/lOk"
            android:textSize="20dp"/>
    </LinearLayout>

</LinearLayout>