<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginStart="10dp"
    android:layout_marginTop="10dp"
    android:layout_marginEnd="10dp"
    android:orientation="vertical"
    tools:context=".IntentTaskFirstActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="60dp"
            android:layout_height="50dp"
            android:layout_marginBottom="10dp"
            android:background="@android:color/transparent"
            android:gravity="start|center"
            android:text="@string/lName"
            android:textColor="@color/intent_task_color"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/etName"
            android:layout_width="270dp"
            android:layout_height="50dp"
            android:background="@drawable/rounded_bg"
            android:hint="@string/enter_name"
            android:inputType="textPersonName|textCapWords" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="60dp"
            android:layout_height="50dp"
            android:layout_marginBottom="10dp"
            android:background="@android:color/transparent"
            android:gravity="start|center"
            android:text="@string/lFamily"
            android:textColor="@color/intent_task_color"
            android:textSize="15sp"

            />

        <EditText
            android:id="@+id/etFamily"
            android:layout_width="270dp"
            android:layout_height="50dp"
            android:background="@drawable/rounded_bg"
            android:hint="@string/enter_family"
            android:inputType="textPersonName|textCapWords"

            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="60dp"
            android:layout_height="50dp"
            android:layout_marginBottom="10dp"
            android:background="@android:color/transparent"
            android:gravity="start|center"
            android:text="@string/lAge"
            android:textColor="@color/intent_task_color"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/etAge"
            android:layout_width="270dp"
            android:layout_height="50dp"
            android:background="@drawable/rounded_bg"
            android:hint="@string/enter_age"
            android:inputType="number" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="60dp"
            android:layout_height="50dp"
            android:layout_marginBottom="10dp"
            android:background="@android:color/transparent"
            android:gravity="start|center"
            android:text="@string/lEmail"
            android:textColor="@color/intent_task_color"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/etEmail"
            android:layout_width="270dp"
            android:layout_height="50dp"
            android:background="@drawable/rounded_bg"
            android:hint="@string/enter_email"
            android:inputType="textEmailAddress" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="60dp"
            android:layout_height="50dp"
            android:layout_marginBottom="10dp"
            android:background="@android:color/transparent"
            android:gravity="start|center"
            android:text="@string/lNumber"
            android:textColor="@color/intent_task_color"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/etPhone"
            android:layout_width="270dp"
            android:layout_height="50dp"
            android:background="@drawable/rounded_bg"
            android:hint="@string/enter_phone_number"
            android:inputType="phone" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">

        <Button
            android:id="@+id/btnOk"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:background="@color/intent_task_color"
            android:text="@string/lOk"
            android:textSize="20sp" />
    </LinearLayout>

</LinearLayout>