<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NavigationDrawerActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorAccent"
        android:gravity="center"
        android:orientation="vertical">

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/animation_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:lottie_autoPlay="true"
            app:lottie_loop="true"
            app:lottie_rawRes="@raw/sun" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="@color/intent_task_color"
        android:gravity="start"
        android:orientation="vertical">

        <Button
            android:id="@+id/btnEdit"
            android:layout_width="120dp"
            android:layout_height="50dp"
            android:layout_margin="20dp"
            android:background="#FFFFFF"
            android:text="@string/lNewUser"
            android:textAllCaps="false"
            android:textColor="#000000"
            android:textSize="20sp" />

        <Button
            android:id="@+id/btnUsersList"
            android:layout_width="120dp"
            android:layout_height="50dp"
            android:layout_margin="20dp"
            android:background="#FFFFFF"
            android:text="@string/lUsersList"
            android:textAllCaps="false"
            android:textColor="#000000"
            android:textSize="20sp" />

        <Button
            android:id="@+id/btnClearList"
            android:layout_width="120dp"
            android:layout_height="50dp"
            android:layout_margin="20dp"
            android:background="#FFFFFF"
            android:text="@string/lClearList"
            android:textAllCaps="false"
            android:textColor="#000000"
            android:textSize="20sp" />

        <Button
            android:id="@+id/btnTimings"
            android:layout_width="120dp"
            android:layout_height="50dp"
            android:layout_margin="20dp"
            android:background="#FFFFFF"
            android:text="@string/timings"
            android:textAllCaps="false"
            android:textColor="#000000"
            android:textSize="20sp" />

        <Button
            android:id="@+id/btnImdb"
            android:layout_width="120dp"
            android:layout_height="50dp"
            android:layout_margin="20dp"
            android:background="#FFFFFF"
            android:text="@string/lImdb"
            android:textAllCaps="false"
            android:textColor="#000000"
            android:textSize="20sp" />

        <Button
            android:id="@+id/btnCamera"
            android:layout_width="120dp"
            android:layout_height="50dp"
            android:layout_margin="20dp"
            android:background="#FFFFFF"
            android:text="@string/camera"
            android:textAllCaps="false"
            android:textColor="#000000"
            android:textSize="20sp" />

    </LinearLayout>

</androidx.drawerlayout.widget.DrawerLayout>